--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Ubuntu:wght@400;500;700&family=Work+Sans:wght@500;600&display=swap');
+
+* {
+    box-sizing: border-box;
+    list-style: none;
+    margin: 0;
+    padding: 0;;
+    outline: 0;
+    text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    background-color: #EDE4FF;
+    font-family: 'Montserrat', sans-serif;
+    height: 100vh;
+    height: 100vh;
+    overflow: hidden;
+    /* font-family: 'Ubuntu', sans-serif; */
+}
+
+:root {
+    --color-bg: #091525;
+    --color-primary: #e0dddd;
+    --main-color: #F0F0F0;
+    --color-hover: #ede4ff;
+
+
+    --container-width-lg: 55%;
+    --container-width-md: 65%;
+    --container-width-lg: 75%;
+}
+
+section {
+    color: var(--color-primary);
+}
+
+ul {    
+    display: flex;
+    flex-direction: column;
+    gap: 1.8rem;
+}
+
+h1 {
+    font-size: 1.3rem;
+    margin-bottom: 0.6rem;
+}
+
+h4 {
+    font-family: 'Work Sans', sans-serif;
+    font-size: 1.3rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin: 2rem 0;
+}
+
+p {
+    font-size: 0.85rem;
+}
+
+a {
+    color: var(--color-primary);
+    font-size: 1.1rem;
+}
+
+a:hover {
+    color: var(--color-hover);
 }
