Complete left sidebar htm and css template

--- a/src/components/rightSidebar/RightSidebar.css
+++ b/src/components/rightSidebar/RightSidebar.css
@@ -1,6 +1,6 @@
 .rightsidebar-container {
     background: var(--color-bg);
-    width: 15%;
+    width: 18rem;
     height: 100vh;
     padding: 0.5rem 0;
 }
