--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,3 +1,182 @@
 .main-container {
     width: 75%;
+    background-color: #141c27;
 }
+
+.main-content-img {
+    width: 100%;
+    height: 40vh;
+    border-bottom: 2px solid #c70039;
+}
+
+.main-content-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+    border-bottom: 2px solid #73da47;
+}
+
+.trending-tracks-container {
+    padding: 1.4rem 1rem 0 1rem;
+    color: var(--color-primary);
+}
+
+.trending-tracks-container  h4 {
+    text-transform: uppercase;
+    color: var(--color-primary);
+    margin: 0;
+    font-size: 1.2rem;
+}
+
+.trending-song-list-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
+.trending-song-list-titles {
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    padding: 0.8rem 0.2rem;
+    margin-top: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15%;
+}
+
+.trending-track {
+    font-size: 0.89rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.trending-song-list-container ul {
+    width: 100%;
+    overflow: scroll;
+    height: 34vh;
+    -ms-overflow-style: none;
+    scrollbar-width: none;  
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px; 
+    border-bottom: 1px solid #091525;
+}
+.trending-song-list-container ul::-webkit-scrollbar {
+        display: none;
+    
+}
+
+/* .trending-artist-song {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0.4rem;
+    border-radius: 0.3rem;
+    margin-top: 0;
+    margin-bottom: 0rem;
+} */
+
+.trending-artist-song:hover {
+    background-color: #091525;
+    cursor: pointer;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+
+
+.trending-artist-song span {
+    display: block;
+    text-transform: capitalize;
+    font-size: 0.98rem;
+}
+
+.space-icon {
+    margin: 0 0.5rem;
+}
+
+.main-controller {
+    width: 100%;
+    background-color: #091320;
+    height: 6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card {
+    width: 3.3rem;
+    height: 3.3rem;
+    background-image: linear-gradient(to right, #73da47 , #c70039);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-primary);
+    font-size: 1.5rem;
+  }
+
+
+
+/* =====================================TABLE ======================================================== */
+.trending-song-list {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    width: 100%;
+}
+
+.trending-song-list thead {
+    margin-top: 1.2rem;
+}
+
+
+.trending-artist-song {
+    display: flex;
+    justify-content: space-between;
+    text-transform: capitalize;
+    padding: 0.1rem;
+    border-radius: 0.3rem;
+}
+
+.trending-artist-song td {
+    margin: 0.6rem 0;
+}
+
+.treading-song-heading {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px, #091525 0px 2px 4px -3px, #091525 0px -2px 0px inset;
+   padding-bottom: 0.7rem;
+}
+
+.artist-container {
+    margin-top: 0.6rem;
+    overflow: scroll;
+    height: 33vh;
+    -ms-overflow-style: none;
+    scrollbar-width: none;  
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px; 
+    border-bottom: 1px solid #091525;
+}
+
+.artist-container::-webkit-scrollbar {
+        display: none;
+    
+}
+
+
+.fixed-width-cell {
+    width: 16rem; /* Adjust the width as needed */
+    white-space: nowrap; /* Prevent text from wrapping to the next line */
+    overflow: hidden; /* Hide overflowing text */
+    text-overflow: ellipsis; /* Show ellipsis (...) for long text */
+    vertical-align: middle;
+  }
+  
+  .time {
+    /* border: 2px solid red; */
+    position: relative;
+    left: 1.8rem;
+  }
+
