--- a/src/components/rightMenu/RightMenu.css
+++ b/src/components/rightMenu/RightMenu.css
@@ -1,13 +1,15 @@
-.leftsidebar-container {
+.rightmenu-container {
     background-color: #091525;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
-    width: 12%;
+    justify-content: center;
+    width: 14rem;
+    min-width: 14rem;
+    overflow: hidden;
 }
 
-.leftsidebar-container h4 {
+.rightmenu-container h4 {
     font-size: 1.1rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
@@ -103,27 +105,66 @@
     font-size: 1.3rem;
 }
 
-.volume-bar-container {
-    background-color: var(--color-primary);
-    border-radius: 0.2rem;
-    width: 45%;
-    height: 0.25rem;
-}
 
 .volume-bar {
-    background-color: #c70039;
     border-radius: 0.2rem;
-    width: 75%;
+    width: 70%;
     height: 0.25rem;
+    border-radius: 0.8rem;
+    border: none;
+    outline: none;
+    position: relative;
+    appearance: none;
 }
 
-.range {
-    background-color: #b8b6b6;
-    width: 0.7rem;
-    height: 0.7rem;
-    border-radius: 50%;
-    border: 2px solid #d8d8d8;
+.volume-bar::before {
+   position: absolute;
+   top: 0;
+   left: 0;
+   content: "";
+   background-color: #c70039;
+   width: 50%;
+   height: 100%;
+   /* z-index: 2; */
+   border-radius: 0.4rem;
+   transition: width var(  --transition) linear;
 }
+
+.volume-bar::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 1rem;
+    height: 1rem;
+    background-color: #c70039;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+    margin: -2px 0 0 0;
+    box-sizing: border-box;
+    transition: width var(  --transition) linear;
+}
+
+/* firefox */
+.volume-bar::-moz-progress-bar {
+    background-color: #c70039;
+   width: 50%;
+   height: 100%;
+   /* z-index: 2; */
+   border-radius: 0.4rem;
+   transition: width var(  --transition) linear;
+}
+
+.volume-bar::-moz-range-thumb {
+    width: 1rem;
+    height: 1rem;
+    background-color: #c70039;
+    border-radius: 50%;
+    cursor: pointer;
+    position: relative;
+    margin: -2px 0 0 0;
+    box-sizing: border-box;
+    transition: width var(  --transition) linear;
+}
+
 
 .volume-control {
     display: flex;
@@ -134,11 +175,6 @@
     position: relative;
 }
 
-.range {
-    position: absolute;
-    top: 0.12rem;
-    right: 1.3rem;
-}
 
 .search-tag-container {
     padding: 1rem 1.3rem;
