--- a/src/components/main/banner/Banner.css
+++ b/src/components/main/banner/Banner.css
@@ -122,3 +122,36 @@
 .follow-icon {
     margin-bottom: -0.3rem;
 }
+
+@media screen and (max-width: 600px) {
+    .top-bar h3{
+    font-size: 1rem;
+    }
+
+    .top-bar-icon {
+        font-size: 1.2rem;
+    }
+
+    .artist h1,
+    .verify-icon {
+        font-size: 1.1rem;
+    }
+
+    .streams-stat {
+        font-size: 0.8rem;
+    }
+
+    .right-content {
+        gap: 1rem;
+    }
+
+    .right-content a{
+        padding: 0.5rem 0.8rem;
+        font-size: 0.8rem;
+    }
+
+    .banner-content,
+    .bottom-bar {
+        padding: 0.5rem 1rem;
+    }
+}
